@@ -7,3 +7,8 @@ profile.profile
 build
 profile/*
 *~
+
+# PyInstaller stuff
+*.spec
+dist
+__pycache__
