@@ -1,3 +1,8 @@
+2016-09-30  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
+
+	* gui/mainWindow.py (MainApp.setFractures): Add execution of the
+	algorithm.
+
 2016-09-29  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/widgets.py (NumberEntry): Add cast to float and int.
